fix some more greys, left align page titles

--- a/_sass/_faq.scss
+++ b/_sass/_faq.scss
@@ -1,19 +1,19 @@
 .faq-toc,.faq-content {
   list-style-type: none;
-
+  text-align: left;
   .post-link {
       display: block;
-      font-size: 1.5rem;
       text-decoration: none;
       line-height: 1.8rem;
       margin-bottom: 0.8em;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       color: $link-color;
       font-weight: 400;
       opacity: 0.8;
       &:hover {
           opacity: 1;
       }
+    
     }
 
     // padding for fixed nav
